...
    <NativeTabs
      backgroundColor={colors.background}
      indicatorColor={colors.backgroundElement}
      labelStyle={{ selected: { color: colors.text } }}>
      <NativeTabs.Trigger name="index">
        <NativeTabs.Trigger.Icon sf="chart.pie.fill" md="dashboard" />
        <NativeTabs.Trigger.Label>Übersicht</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>

      <NativeTabs.Trigger name="fridge">
        <NativeTabs.Trigger.Icon sf="archivebox.fill" md="kitchen" />
        <NativeTabs.Trigger.Label>Vorrat</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
...
