...
  const { colors } = useTheme();

  return (
    <IconButton
      icon="menu"
      onPress={onPress}
      testID="navigation-menu-open"
      accessibilityLabel="Menü öffnen"
      color={colors.accent}
      bg={colors.backgroundSoft}
      size={54}
      iconSize={20}
      style={styles.button}
...
